# csl_ros2_control

./: .gitignore  README.md
controllers/biped_wheel_controller/: CMakeLists.txt  package.xml
controllers/biped_wheel_controller/launch/: bringup.launch.py
controllers/biped_wheel_controller/resource/: biped_wheel_controller.xml
controllers/biped_wheel_controller/src/: biped_wheel_controller.cpp
controllers/python_controller/: controllerV3_him_imu.py  stand_def.py
controllers/python_controller/config/: reddog_him.yaml
controllers/rl_quadruped_controller/: CMakeLists.txt  package.xml
controllers/rl_quadruped_controller/include/rl_quadruped_controller/: rl_quadruped_controller.hpp
controllers/rl_quadruped_controller/launch/: bringup.launch.py
controllers/rl_quadruped_controller/resource/: rl_quadruped_controller.xml
controllers/rl_quadruped_controller/src/: rl_quadruped_controller.cpp
descriptions/big_reddog_description/: CMakeLists.txt  package.xml
descriptions/big_reddog_description/config/: robot_control.yaml
descriptions/big_reddog_description/launch/: display.launch  gazebo.launch
descriptions/big_reddog_description/urdf/: robot.urdf
descriptions/big_reddog_description/xacro/: robot.xacro
descriptions/big_reddog_description/xml/: bigreddog.xml  scene.xml
descriptions/bipedwheel_description/: CMakeLists.txt  package.xml
descriptions/bipedwheel_description/config/: robot_control.yaml
descriptions/bipedwheel_description/launch/: display.launch  gazebo.launch
descriptions/bipedwheel_description/urdf/: robot.urdf
descriptions/bipedwheel_description/xacro/: robot.xacro
descriptions/reddog_description/: CMakeLists.txt  package.xml
descriptions/reddog_description/config/: robot_control.yaml
descriptions/reddog_description/meshes/: FL_calf.STL  FL_foot.STL  FR_calf.STL  FR_foot.STL  RL_calf.STL  RL_foot.STL  RR_calf.STL  RR_foot.STL
descriptions/reddog_description/urdf/: reddog_20250221.csv  robot.urdf
descriptions/reddog_description/xacro/: robot.xacro
descriptions/reddog_description/xml/: reddog.xml  scene.xml
hardwares/dds_bridge/hardware_dds_bridge/: DM_CAN.py  Motor_Manager_origin.py  hardware_manager.py
hardwares/dds_bridge/test/: get_low_state.py  get_low_state_plot.py  stand.py
hardwares/hardware_dds_bridge/: package.xml  setup.cfg  setup.py
hardwares/reddog_hardware/: package.xml  setup.cfg  setup.py
libraries/joystick/: package.xml  setup.py
setup/: setup_ports.sh
(+21 files in other folders)
