<?xml version="1.0"?>
<package format="3">
  <name>rl_quadruped_controller</name>
  <version>0.1.0</version>
  <description>RL-based quadruped controller for ROS2 Control</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>yaml-cpp</depend>

  <exec_depend>libtorch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin="resource/rl_quadruped_controller.xml"/>
  </export>
</package>
